# sfu-webcams-recorder

./: .gitignore  README.md  pyproject.toml
log/snapshots/: 2026-02-11_02-36-38_PM.snapshot  2026-02-11_02-36-48_PM.snapshot  2026-02-11_02-36-58_PM.snapshot  2026-02-11_02-37-08_PM.snapshot
media/videos/2026-2-6-fri/timestamps/: towers.txt  wmcroof.txt
scripts/: start.py
src/sfu_webcams/: downloader.py  loop.py  main.py  timeutils.py
src/sfu_webcams_recorder/: config.py  create_daily_video.py  download_image.py  loop.py  main.py  timeutils.py  utils.py
src/sfu_webcams_recorder/config/: settings.py  webcams.py
src/sfu_webcams_recorder/downloader/: image.py
src/sfu_webcams_recorder/io/: video.py  webcam.py
src/sfu_webcams_recorder/scheduler/: loop.py
src/sfu_webcams_recorder/ui/: dashboard.py  state.py
src/sfu_webcams_recorder/video/: create_daily_video.py
