[project]
name = "sfu-webcams-recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytz>=2025.2",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "ruff>=0.15.0",
]

[project.scripts]
sfu-webcams-recorder = "sfu_webcams_recorder.main:main"

[tool.ruff.lint]
select = ["E", "F", "I"]
